--- a/.classpath
+++ b/.classpath
@@ -8,5 +8,8 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
+	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v7.0"/>
+	<classpathentry kind="lib" path="E:/CDAC_slide/adv_java/springjarfile/jdbc/mysql-connector-java-8.0.16.jar"/>
+	<classpathentry kind="lib" path="C:/Users/PRINCE/Desktop/java_file/LoginPassword/WebContent/WEB-INF/lib/tomcat-jdbc.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
